backend mongoDB ashiglasan

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,21 @@
 {
+ "name": "be-food-delivery",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@types/express": "^5.0.2",
     "express": "^5.1.0",
     "init": "^0.1.2",
+    "mongoose": "^8.15.1",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
