--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
- "name": "be-food-delivery",
+  "name": "be-food-delivery",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^5.0.2",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "init": "^0.1.2",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18"
   }
 }
