--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.18"
+    "@types/cors": "^2.8.18",
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
