--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,10 @@
     "formik": "^2.4.6",
     "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
+    "lucide": "^0.515.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
     "yup": "^1.6.1"
