--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.18.1",
     "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.515.0",
