--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "next": "15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "tailwind-merge": "^3.3.0",
     "yup": "^1.6.1"
   },
