--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
     "tailwind-merge": "^3.3.0",
+    "vaul": "^1.1.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
